# APC524_Final_Project

./: .gitignore  .pre-commit-config.yaml  PDF_Data_Analysis.py  README.md  environment.yml  log.txt  noxfile.py  pyproject.toml
data/: pdf_dwell_peaks.npz  pdf_ramp_peaks.npz  tracked_peak_matrix.txt  user_input.txt
gr_files/: Synthetic_CSH_200degC_normalized.gr  Synthetic_CSH_300degC_normalized.gr  Synthetic_CSH_400degC_normalized.gr  Synthetic_CSH_500degC_normalized.gr  Synthetic_CSH_600degC_normalized.gr  Synthetic_CSH_900degC_normalized.gr  Synthetic_CSH_CSH_pdf_ramp_1000_01_normalized.gr  Synthetic_CSH_CSH_pdf_ramp_1000_02_normalized.gr  Synthetic_CSH_CSH_pdf_ramp_1000_04_normalized.gr  Synthetic_CSH_CSH_pdf_ramp_1000_06_normalized.gr  Synthetic_CSH_CSH_pdf_ramp_1000_08_normalized.gr  Synthetic_CSH_CSH_pdf_ramp_100_00_normalized.gr  Synthetic_CSH_CSH_pdf_ramp_100_03_normalized.gr  Synthetic_CSH_CSH_pdf_ramp_100_04_normalized.gr  Synthetic_CSH_CSH_pdf_ramp_100_05_normalized.gr  Synthetic_CSH_CSH_pdf_ramp_100_06_normalized.gr  Synthetic_CSH_CSH_pdf_ramp_100_07_normalized.gr  Synthetic_CSH_CSH_pdf_ramp_200_01_normalized.gr  Synthetic_CSH_CSH_pdf_ramp_200_02_normalized.gr  Synthetic_CSH_CSH_pdf_ramp_200_04_normalized.gr  Synthetic_CSH_CSH_pdf_ramp_200_05_normalized.gr  Synthetic_CSH_CSH_pdf_ramp_200_06_normalized.gr  Synthetic_CSH_CSH_pdf_ramp_200_10_normalized.gr  Synthetic_CSH_CSH_pdf_ramp_300_01_normalized.gr  Synthetic_CSH_CSH_pdf_ramp_300_04_normalized.gr  Synthetic_CSH_CSH_pdf_ramp_300_08_normalized.gr  Synthetic_CSH_CSH_pdf_ramp_300_09_normalized.gr  (+32 more)
(+83 files in other folders)
