[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "APC524 Fall 2023 Group Project"
authors = [
    {name = "Sophia Bergen", email = "sb5213@princeton.edu"},
    {name = "Debra Keiser", email = "dkeiser@princeton.edu"},
    {name = "Meddelin Setiawan", email = "ms8898@princeton.edu"}
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest"
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[tool.black]
extend-exclude = [
  .txt|.md|.gr|.cfg
]

[tool.ruff]
select = [
  "E", "F", "W", # default checks
  "B", # bugbear
  "I", # isort
  "RUF", # Ruff-specific
  "UP", # PyUpgrade
  "ARG", # flake8 unused arguments
  "C4", # flake8-comprehensions
]
extend-ignore = [
  "E501",   # long line
]
extend-exclude = [
  ".txt", ".md", ".gr", ".cfg"
]
